--- a/README
+++ b/README
@@ -16,8 +16,8 @@ Example
     acts_as_list :scope => :todo_list
   end
 
-  todo_list.first.move_to_bottom
-  todo_list.last.move_higher
+  todo_list.todo_items.first.move_to_bottom
+  todo_list.todo_items.last.move_higher
 
 
 Copyright (c) 2007 David Heinemeier Hansson, released under the MIT license
